[package]
name = "eilpx"
authors = ["drklee3 <dlee3@scu.edu>"]
description = "Command line tool to pixel sort images based on colour, alpha, or luma values."
homepage = "https://github.com/drklee3/eilpx"
repository = "https://github.com/drklee3/eilpx.git"
keywords = ["pixel", "sorter", "sorting"]
license = "ISC"
readme = "README.md"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "0.4"
clap = "2.32"
image = "0.20"
log = "0.4"

[dependencies.fern]
version = "0.5"
features = ["colored"]